test/spec_vectors/simd_i64x2_extmul_i32x4/fail/module_12.wat
(module (func $i64x2.extmul_high_i32x4_u-arg-empty (result v128) (i64x2.extmul_high_i32x4_u)))